Update to newest API level and get rid of deprecated APIs and other warnings